--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,13 @@ packages = [{include = "sdm_engine"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pymongo = "^4.2.0"
+fastapi = "^0.85.0"
+uvicorn = {extras = ["standard"], version = "^0.18.3"}
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start = "sdm_engine.main:start"
