--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ uvicorn = {extras = ["standard"], version = "^0.18.3"}
 python-multipart = "^0.0.5"
 
 
+[tool.poetry.group.dev.dependencies]
+black = {version = "^22.10.0", allow-prereleases = true}
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
